[package]
name = "dsll"
version = "0.1.1"
edition = "2021"
license-file = "LICENSE"
authors = ["Rouzbeh Sabzehei <rouzbehsbz@gmail.com>"]
description = "Fast Thread Safe Doubly Sorted Linked List"
keywords = ["linked-list", "sorted-linked-list"]
categories = ["algorithms", "data-structures"]
repository = "https://github.com/rouzbehsbz/dsll"
readme = "README.md"

[lib]
name = "dsll"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]

